Try to solve blank space bottom of page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,8 @@
-#root {
-  /* width:100%; height:100%;
-  background: url("/back.jpg") center center;
-  background-attachment: fixed;*/
-  background-size:100% auto;
-  background: linear-gradient(to bottom right,#CEA5E1, rgb(48,10,36), #2b1335) no-repeat;
-  background-attachment: fixed;
-}
 .App {
   text-align: center;
-  /* margin: 0 auto;
-  margin-left: 0.2%;
-  margin-right: 0.2%;
-  border: 1px solid transparent; */
-  /* box-shadow: 1px 0 1px lightgrey; */
-  /* width: 99.6%; */
-  /* height: 100%; */
   max-width: 100%;
+  background: linear-gradient(to bottom right,#CEA5E1, rgb(48,10,36), #2b1335) no-repeat;
+  background-attachment: fixed;
 }
 .myItem {
   width: 16%;
